fixing text-align property for nav

--- a/styles.css
+++ b/styles.css
@@ -19,7 +19,7 @@ body {
   font-family: 'Roboto', sans-serif;
   letter-spacing: 2px;
   font-size: 12px;
-  align=: left
+  text-align: left
 }
 
 .subheader {
